styling a go go

--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -18,12 +18,10 @@
 
 	<body class="body-main">
 		
-	<header>
+	<header class="header-nav">
         <img src="img/icons8-spa-flower-50.png" alt="flower logo" />
-        
-
 		<h1>KORE <span style="font-weight:400">botanicals</span></h1>
-		<nav>
+		<nav class="navigation">
             <ul>
                 <li><a href="#">INGREDIENTS</a></li>
                 <li><a href="#">SOURCING</a></li>
@@ -45,20 +43,30 @@
 
     <div class="product-info">
 
-            <!--  icon 1 -->
-            <img src="img/icons8-spa-flower-100.png" alt="flower icon">
-            <h3>PREMIUM INGREDIENTS</h3>
-            <p>Indulge your sense with KORE's meticulously curated, premium-grade ingredients, elevating your skincare experience to new heights.</p>
+            <div class="ing-ship-hassle-info">
+                <div class="hundred-px-image">
+                <img src="img/icons8-spa-flower-100.png" alt="flower icon"></div>  
+                <div class="ing-ship-hassle-info-text">
+                <h3>PREMIUM INGREDIENTS</h3>
+                <p>Indulge your sense with KORE's meticulously curated, premium-grade ingredients, elevating your skincare experience to new heights.</p></div>
+            </div>
 
-            <!-- icon 2 -->
-            <img src="img/icons8-delivery-100.png" alt="delivery truck icon">
-            <h3>FREE EXPRESS SHIPPING</h3>
-            <p>Experience the convenience of swift and complimentary shipping on all orders, as KORE ensures your skincare essentials reach your doorstep promptly, so you can effortlessly embrace your radiant journey.</p>
+            <div class="ing-ship-hassle-info">
+                <div class="hundred-px-image">
+                <img src="img/icons8-delivery-100.png" alt="delivery truck icon"></div>
+                <div class="ing-ship-hassle-info-text">
+                <h3>FREE EXPRESS SHIPPING</h3>
+                <p>Experience the convenience of swift and complimentary shipping on all orders, as KORE ensures your skincare essentials reach your doorstep promptly, so you can effortlessly embrace your radiant journey.</p></div>
+            </div>
 
-            <!-- icon 3 -->
-            <img src="img/icons8-shopaholic-100.png" alt="shopping bag icon">
-            <h3>HASSLE-FREE RETURNS</h3>
-            <p>With our rigorous quality assurances, we guarantee that every item meets our highest standards. Plus, enjoy peace of mind with our hassle-free return policy, allowing you to explore our skincare offerings risk-free.</p>
+            <div class="ing-ship-hassle-info">
+                <div class="hundred-px-image">
+                <img src="img/icons8-shopaholic-100.png" alt="shopping bag icon">
+                </div>
+                <div class="ing-ship-hassle-info-text">
+                <h3>HASSLE-FREE RETURNS</h3>
+                <p>With our rigorous quality assurances, we guarantee that every item meets our highest standards. Plus, enjoy peace of mind with our hassle-free return policy, allowing you to explore our skincare offerings risk-free.</p></div>
+            </div>
     </div>
 
     <div class="video-content">
