--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -54,7 +54,7 @@
         
         <ul>
             <li><h3>4</h3></li>
-            <li>Learn CSS Variables by Building a City Skyline</li>
+            <li><a href="freecodecamp/city-skyline/index.html" target="_blank">Learn CSS Variables by Building a City Skyline</a></li>
             <li>Learn CSS Grid by Building a Magazine</li>
             <li><a href="freecodecamp/product-page/index.html" target="_blank">Certification Project: Product Landing Page</a></li>
         </ul>
