--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -18,14 +18,17 @@
 
 	<body class="body-main">
 		
-	<header class="header-nav">
-        <img src="img/icons8-spa-flower-50.png" alt="flower logo" />
+	<header class="header-nav" id="header">
+        <!--previous logo image
+        <img src="img/icons8-spa-flower-50.png" alt="flower logo" />-->
+        <img width="100" height="100" src="https://img.icons8.com/ios/100/flower--v1.png" alt="flower--v1" id="header-img"/>
+
 		<h1>KORE <span style="font-weight:400">botanicals</span></h1>
-		<nav class="navigation">
+		<nav class="navigation" id="nav-bar">
             <ul>
-                <li><a href="#">INGREDIENTS</a></li>
-                <li><a href="#">SOURCING</a></li>
-                <li><a href="#">SHOP</a></li>
+                <li><a href="#ingredients" class="nav-link">INGREDIENTS</a></li>
+                <li><a href="#sourcing" class="nav-link">SOURCING</a></li>
+                <li><a href="#shop" class="nav-link">SHOP</a></li>
             </ul>
         </nav>
 	</header>
@@ -76,7 +79,16 @@
         <!-- viceo is 960 x 540-->
     </div>
 
-    <div class="product-options">
+    <div id="ingredients">
+        <h1>INGREDIENTS</h1>
+        <p>Pokem ipsum dolor sit amet Tentacruel Scolipede Gothitelle Razor Leaf Zigzagoon Watchog. Cascade Badge Quilava Pawniard Wormadam Ground we're blasting off again to protect the world from devastation. Team Rocket Lavender Town Technical Machine Gurdurr Prinplup Elite Four Team Rocket. Mineral Badge Delibird Vulpix Sigilyph Shelgon Deerling Zangoose. Splash Golbat Vulpix Pignite Mudkip Starmie Palpitoad.</p>
+    </div>
+    <div id="sourcing">
+        <h1>SOURCING</h1>
+        <p>Pokem ipsum dolor sit amet Tentacruel Scolipede Gothitelle Razor Leaf Zigzagoon Watchog. Cascade Badge Quilava Pawniard Wormadam Ground we're blasting off again to protect the world from devastation. Team Rocket Lavender Town Technical Machine Gurdurr Prinplup Elite Four Team Rocket. Mineral Badge Delibird Vulpix Sigilyph Shelgon Deerling Zangoose. Splash Golbat Vulpix Pignite Mudkip Starmie Palpitoad.</p>
+    </div>
+
+    <div class="product-options" id="shop">
         <div id="product-1">
             <div class="product-name"><h4>ROSE FACIAL OIL</h4></div>
             <p class="product-price">$33</p>
