--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -35,11 +35,11 @@
 
     <div class="email">
         <h2>Purely crafted + ethical. Unveil your skin's <span style="font-weight:700">KORE</span>.</h2>
-        <form action="/action_page.php">
+        <form action="https://www.freecodecamp.com/email-submit" id="form">
             <fieldset>
              <label for="email">→</label>
              <input type="email" id="email" name="email" size="50" placeholder="Your lovely email address..."><br><br>
-             <input type="submit" value="TELL ME MORE" id="button-style">
+             <input type="submit" value="TELL ME MORE" id="submit">
             </fieldset>
            </form>
     </div>
@@ -73,7 +73,7 @@
     </div>
 
     <div class="video-content">
-        <video autoplay muted loop>
+        <video autoplay muted loop id="video">
         <source src="img/roses-water.mp4" type="video/mp4">
       </video>
         <!-- viceo is 960 x 540-->
