updated styling after FCC submit edits

--- a/freecodecamp/product-page/index.html
+++ b/freecodecamp/product-page/index.html
@@ -37,8 +37,8 @@
         <h2>Purely crafted + ethical. Unveil your skin's <span style="font-weight:700">KORE</span>.</h2>
         <form action="https://www.freecodecamp.com/email-submit" id="form">
             <fieldset>
-             <label for="email">→</label>
-             <input type="email" id="email" name="email" size="50" placeholder="Your lovely email address..."><br><br>
+             <label for="email"></label>
+             <input type="email" id="email" name="email" size="50" placeholder=" Your lovely email address..."><br><br>
              <input type="submit" value="TELL ME MORE" id="submit">
             </fieldset>
            </form>
@@ -117,6 +117,6 @@
         <li><a href="#">TERMS</a></li>
         <li><a href="#">CONTACT</a></li>
     </ul>
-    <p>Copyright 2023 - <span style="font-weight:700">KORE</span> botanicals</p>
+    <p id="copyright-info">Copyright 2023 - <span style="font-weight:700">KORE</span> botanicals</p>
 </footer>
 </html>
