added URL and screenshot img for FCC product page

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -57,6 +57,7 @@
             <li><a href="freecodecamp/city-skyline/index.html" target="_blank">Learn CSS Variables by Building a City Skyline</a></li>
             <li><a href="freecodecamp/magazine-CSS-grid/index.html" target="_blank">Learn CSS Grid by Building a Magazine</a></li>
             <li><a href="freecodecamp/product-page/index.html" target="_blank">Certification Project: Product Landing Page</a></li>
+            <li><a href="#" target="_blank"><img src="images/product-page-screenshot.png"></a></li>
         </ul>
 
 
