add URL for ferris wheel exercise

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -64,7 +64,7 @@
         
         <ul>
             <li><h3>5</h3></li>
-            <li>Learn CSS Animation by Building a Ferris Wheel</li>
+            <li><a href="freecodecamp/ferris-wheel/index.html" target="_blank">Learn CSS Animation by Building a Ferris Wheel</a></li>
             <li>Learn CSS Transforms by Building a Penguin</li>
             <li>Certification Project: Personal Portfolio Webpage</li>
             <a href="#" target="_blank">
