add URL for penguin exercise

--- a/freecodecamp.html
+++ b/freecodecamp.html
@@ -65,7 +65,7 @@
         <ul>
             <li><h3>5</h3></li>
             <li><a href="freecodecamp/ferris-wheel/index.html" target="_blank">Learn CSS Animation by Building a Ferris Wheel</a></li>
-            <li>Learn CSS Transforms by Building a Penguin</li>
+            <li><a href="freecodecamp/penguin-animation/index.html" target="_blank">Learn CSS Transforms by Building a Penguin</a></li>
             <li>Certification Project: Personal Portfolio Webpage</li>
             <a href="#" target="_blank">
                 <img src="images/project-placeholder.png"></a>
