user stories IDs set up

--- a/freecodecamp/personal-portfolio/index.html
+++ b/freecodecamp/personal-portfolio/index.html
@@ -13,7 +13,11 @@
 
 	<body>
 	<header>
-    <nav></nav>
+    <nav id="navbar">
+        <ul>
+            <li><a href="https://github.com/Victoria-Farr" target="_blank" id="profile-link">GitHub</a></li>
+        </ul>
+    </nav>
 	</header>
 
     <div id="welcome-section">
