removed font awesome script snippet

--- a/freecodecamp/personal-portfolio/index.html
+++ b/freecodecamp/personal-portfolio/index.html
@@ -15,6 +15,7 @@
 	<header>
     <nav id="navbar">
         <ul>
+            <li><a href="#projects">projects</a></li>
             <li><a href="https://github.com/Victoria-Farr" target="_blank" id="profile-link">GitHub</a></li>
         </ul>
     </nav>
@@ -25,8 +26,12 @@
     </div>
 
     <div id="projects">
-        <div class="project-tile"></div>
+        <div class="project-tile">
         <!-- links to projects + thumbnails go herrr -->
+        <ul>
+            <li><a href="#">Year of the {Coding} Rabbit</a></li>
+        </ul>
+        </div>
     </div>
 
 </body>
