--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <title>put the bunny back in the box (model)</title>
     <meta charset="UTF-8">
-    <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon"><link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/icons8-rabbit-50.png" alt="rabbit icon">
+    <link rel="stylesheet" href="styles.css">
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
