--- a/freecodecamp/personal-portfolio/index.html
+++ b/freecodecamp/personal-portfolio/index.html
@@ -8,6 +8,8 @@
 	<meta name="description" content="page description">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://img.icons8.com/pastel-glyph/64/source-code--v1.png" alt="source-code--v1" alt="code brackets icon">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -19,7 +21,7 @@
 	<header>
     <nav id="navbar">
         <ul>
-            <li><a href="#projects">projects</a></li>
+            <li><a href="#projects">Projects</a></li>
             <li><a href="https://github.com/Victoria-Farr" target="_blank" id="profile-link">GitHub</a></li>
         </ul>
     </nav>
@@ -33,8 +35,16 @@
         <div class="project-tile">
         <!-- links to projects + thumbnails go herrr -->
         <ul>
-            <li><a href="#">Year of the {Coding} Rabbit</a></li>
+            <li><a href="#">freeCodeCamp Survey Form</a></li>
+            <li><a href="#">Tribute Page</a></li>
+            <li><a href="#">Technical Documentation Page</a></li>
+            <li><a href="#">Product Landing Page</a></li>
         </ul>
+        </div>
+
+        <div class="credits">
+            <p>Icons by Icons8</p>
+            <p>Projects from <a href="#">freeCodeCamp</a> Responsive Web Design Certification course</p>
         </div>
     </div>
 
