welcome-section copy add

--- a/freecodecamp/personal-portfolio/index.html
+++ b/freecodecamp/personal-portfolio/index.html
@@ -28,10 +28,13 @@
 	</header>
 
     <div id="welcome-section">
-		<h1>Victoria Farr</h1>
+		<h1>Hi! I'm Victoria.</h1>
+        <p>I'm a digital design flamingo 🦩 UI nerd ⚡️ coding bunny 🐇 and nacho enthusiast. 🧀 💛</p>
+        <p>These are projects I completed while working on the freeCodeCamp Responsive Web Design certification course. I loved learning more about HTML & CSS-I'll be diving into Javascript next!</p>
     </div>
 
     <div id="projects">
+        <h2>Projects</h2>
         <div class="project-tile">
         <!-- links to projects + thumbnails go herrr -->
         <ul>
@@ -43,8 +46,12 @@
         </div>
 
         <div class="credits">
-            <p>Icons by Icons8</p>
-            <p>Projects from <a href="#">freeCodeCamp</a> Responsive Web Design Certification course</p>
+            <h3>Project Credits</h3>
+            <p>Projects: from <a href="#">freeCodeCamp</a> Responsive Web Design Certification course</p>
+            <p>Icons: by Icons8</p>
+            <p>Type: Google Fonts</p>
+
+
         </div>
     </div>
 
