added GIF for welcome section

--- a/freecodecamp/personal-portfolio/index.html
+++ b/freecodecamp/personal-portfolio/index.html
@@ -21,14 +21,16 @@
 	<header>
     <nav id="navbar">
         <ul>
+            <li><a href="#welcome-section">Hiya!</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#credits">Credits</a></li>
             <li><a href="https://github.com/Victoria-Farr" target="_blank" id="profile-link">GitHub</a></li>
         </ul>
     </nav>
 	</header>
 
     <div id="welcome-section">
-		<h1>Hi! I'm Victoria.</h1>
+		<h1>Hiya! I'm Victoria.</h1>
         <p>I'm a digital design flamingo 🦩 UI nerd ⚡️ coding bunny 🐇 and nacho enthusiast. 🧀 💛</p>
         <p>These are projects I completed while working on the freeCodeCamp Responsive Web Design certification course. I loved learning more about HTML & CSS-I'll be diving into Javascript next!</p>
     </div>
@@ -50,7 +52,9 @@
             <p>Projects: from <a href="#">freeCodeCamp</a> Responsive Web Design Certification course</p>
             <p>Icons: by Icons8</p>
             <p>Type: Google Fonts</p>
-
+            <p>Image(s): # TBD
+                Illustration by <a href="https://icons8.com/illustrations/author/mNCLibjicqSz">Julia K</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
+            </p>
 
         </div>
     </div>
