--- a/freecodecamp/personal-portfolio/index.html
+++ b/freecodecamp/personal-portfolio/index.html
@@ -35,6 +35,10 @@
         <p>These are projects I completed while working on the freeCodeCamp Responsive Web Design certification course. I loved learning more about HTML & CSS-I'll be diving into Javascript next!</p>
     </div>
 
+    <div>
+        <img src="img/beam-woman-sitting-at-desk-and-programming.gif" id="woman-coding-GIF" alt="GIF of a woman coding at desk">
+    </div>
+
     <div id="projects">
         <h2>Projects</h2>
         <div class="project-tile">
@@ -47,13 +51,16 @@
         </ul>
         </div>
 
+        <div><img src="img/beam-browser-window.gif" alt="GIF of a browser window"></div>
+
         <div class="credits">
             <h3>Project Credits</h3>
             <p>Projects: from <a href="#">freeCodeCamp</a> Responsive Web Design Certification course</p>
             <p>Icons: by Icons8</p>
             <p>Type: Google Fonts</p>
-            <p>Image(s): # TBD
-                Illustration by <a href="https://icons8.com/illustrations/author/mNCLibjicqSz">Julia K</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
+            <p>Image(s):Coding lady illustration by <a href="https://icons8.com/illustrations/author/mNCLibjicqSz">Julia K</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
+                <br>
+            Browser window illustration by <a href="https://icons8.com/illustrations/author/SBxHVFmfplnQ">Vera Erm</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
             </p>
 
         </div>
