added divs to welcome section

--- a/freecodecamp/personal-portfolio/index.html
+++ b/freecodecamp/personal-portfolio/index.html
@@ -30,13 +30,14 @@
 	</header>
 
     <div id="welcome-section">
+        <div id="welcome-section-text">
 		<h1>Hiya! I'm Victoria.</h1>
         <p>I'm a digital design flamingo 🦩 UI nerd ⚡️ coding bunny 🐇 and nacho enthusiast. 🧀 💛</p>
         <p>These are projects I completed while working on the freeCodeCamp Responsive Web Design certification course. I loved learning more about HTML & CSS-I'll be diving into Javascript next!</p>
-    </div>
-
-    <div>
-        <img src="img/beam-woman-sitting-at-desk-and-programming.gif" id="woman-coding-GIF" alt="GIF of a woman coding at desk">
+        </div>
+        <div id="welcome-section-image">
+            <img src="img/beam-woman-sitting-at-desk-and-programming.gif" id="woman-coding-GIF" alt="GIF of a woman coding at desk">
+        </div>
     </div>
 
     <div id="projects">
