credits flexbox set up

--- a/freecodecamp/personal-portfolio/index.html
+++ b/freecodecamp/personal-portfolio/index.html
@@ -52,9 +52,11 @@
         </ul>
         </div>
 
-        <div><img src="img/beam-browser-window.gif" alt="GIF of a browser window"></div>
 
-        <div class="credits">
+        <div id="credits">
+            <div id="credit-image"><img src="img/beam-browser-window.gif" alt="GIF of a browser window"></div>
+
+            <div id="credits-text">
             <h3>Project Credits</h3>
             <p>Projects: from <a href="#">freeCodeCamp</a> Responsive Web Design Certification course</p>
             <p>Icons: by Icons8</p>
@@ -63,7 +65,7 @@
                 <br>
             Browser window illustration by <a href="https://icons8.com/illustrations/author/SBxHVFmfplnQ">Vera Erm</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
             </p>
-
+            </div>
         </div>
     </div>
 
