--- a/freecodecamp/personal-portfolio/index.html
+++ b/freecodecamp/personal-portfolio/index.html
@@ -19,6 +19,7 @@
 
 	<body>
 	<header>
+        <p id="logo-style">Victoria's Portfolio</p>
     <nav id="navbar">
         <ul>
             <li><a href="#welcome-section">Hiya!</a></li>
@@ -40,34 +41,34 @@
         </div>
     </div>
 
-    <div id="projects">
+    <div class="projects">
         <h2>Projects</h2>
         <div class="project-tile">
         <!-- links to projects + thumbnails go herrr -->
         <ul>
-            <li><a href="#">freeCodeCamp Survey Form</a></li>
-            <li><a href="#">Tribute Page</a></li>
-            <li><a href="#">Technical Documentation Page</a></li>
-            <li><a href="#">Product Landing Page</a></li>
+            <li><a href="#"><img src="img/FCC-project-1-screenshot.png"></a></li>
+            <li><a href="#"><img src="img/tribute-page-screenshot.png"></a></li>
+            <li><a href="#"><img src="img/technical-documentation-screenshot.png"></a></li>
+            <li><a href="#"><img src="img/product-page-screenshot.png"></a></li>
         </ul>
         </div>
-
+        </div>
 
         <div id="credits">
             <div id="credit-image"><img src="img/beam-browser-window.gif" alt="GIF of a browser window"></div>
 
             <div id="credits-text">
             <h3>Project Credits</h3>
-            <p>Projects: from <a href="#">freeCodeCamp</a> Responsive Web Design Certification course</p>
-            <p>Icons: by Icons8</p>
-            <p>Type: Google Fonts</p>
+            <p>Projects: from <a href="https://www.freecodecamp.org/">freeCodeCamp</a> Responsive Web Design Certification course</p>
+            <p>Icons: by <a href="https://icons8.com/icons">Icons8</a></p>
+            <p>Type: <a href="https://fonts.google.com/specimen/Azeret+Mono?category=Monospace" target="_blank">Google Fonts</a></p>
             <p>Image(s):Coding lady illustration by <a href="https://icons8.com/illustrations/author/mNCLibjicqSz">Julia K</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
                 <br>
             Browser window illustration by <a href="https://icons8.com/illustrations/author/SBxHVFmfplnQ">Vera Erm</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
             </p>
             </div>
         </div>
-    </div>
+   
 
 </body>
 
